# pybib

./: .gitignore  .mailmap  .travis.yml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-ci.yml
examples/: citations.bib  citations.doi
pybib/: __init__.py  drivers.py  format.py  formatters.py  main.py  pybib.py  utils.py
tests/: test_format.py  test_pybib.py  test_utils.py
