[tool.poetry]
name = "pybib"
version = "2.3.1"
description = "Fetch BibTeX citation information, given a Digital Object Identifier"
authors = ["Jonathan Gilchrist <jonathan.gilchrist@factset.com>"]
homepage = "https://jgilchrist.github.io/pybib/"
repository = "https://github.com/jgilchrist/pybib"
license = "BSD-3-Clause"
readme = "README.rst"

[tool.poetry.dependencies]
# python = "^3.6"
requests = "^2.21"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
pyhamcrest = "^1.9"
pytest = "^4.6"
pytest-cov = "^2.7"
requests-mock = "^1.6"

[tool.poetry.scripts]
bib = "pybib:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
