[tool.poetry]
name = "pybib"
version = "2.3.2"
description = "Fetch BibTeX citation information, given a Digital Object Identifier"
authors = ["Jonathan Gilchrist <jonathan.gilchrist@factset.com>"]
homepage = "https://jgilchrist.github.io/pybib/"
repository = "https://github.com/jgilchrist/pybib"
license = "BSD-3-Clause"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.5"
requests = "^2.24"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pyhamcrest = "2.0.2"
pytest = "6.0.1"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"

[tool.poetry.scripts]
bib = "pybib:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
